blog hidden and font changes

--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 layout: page
 title: Projects
 ---
-<h2 class="title" style="font-family: 'Noto Serif';">PROJECTS</h2>
+<h2 class="title" >PROJECTS</h2>
 <section class="list">
     {% for post in site.posts %}
         {% if post.projects %}
